# OpenMP_Project

./: CMakeLists.txt  README.md  parallel.c
